<?xml version="1.0" encoding="utf-8"?>
<!-- The drawer for the menu on the home activity -->
<!-- Function: renders the navigation drawer list items -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_view_recipes"
            android:icon="@drawable/ic_recipes_white"
            android:title="@string/nav_view_recipes"/>
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/ic_shopping_list_white"
            android:title="@string/nav_shopping_list"/>
        <item
            android:id="@+id/nav_nearby_stores"
            android:icon="@drawable/ic_map_white"
            android:title="@string/nav_grocery"/>
        <item
            android:id="@+id/nav_messaging"
            android:icon="@drawable/ic_messages_white"
            android:title="@string/nav_messaging" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_white"
            android:title="@string/nav_profile"/>

    </group>
</menu>