<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddRecipe">

    <!-- TODO: Add functionality for scrolling-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/addRecipeName"
        android:textSize="22sp"
        android:typeface="normal"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/rName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hintRecipeName"
        android:textSize="14sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/addRecipeIngredients"
        android:textSize="22sp"
        android:typeface="normal" />

    <EditText
        android:id="@+id/rIngredients"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/hintRecipeIngredients"
        android:inputType="text"
        android:textSize="14sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/addRecipeInstructions"
        android:textSize="22sp"
        android:typeface="normal" />

    <EditText
        android:id="@+id/rTags"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/hintRecipeInstructions"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/buttonSubmitRecipe"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnAddRecipe"
        android:elevation="10dp"
        android:layout_marginTop="60dp"/>

    <Button
        android:id="@+id/buttonViewRecipes"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="View Recipes"
        android:elevation="10dp"
        android:layout_marginTop="5dp"/>
</LinearLayout>